# sovereign-ai-stack-book

./: .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  SPEC.md  book.toml  deny.toml  justfile  pmat.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-book.yml
.pmat/: context.db  deps-cache.json  project.toml
.pmat-metrics/: test-fast.start
.pmat/context.idx/: functions.lz4  manifest.json
.pmat/metrics/: dependencies.json
benches/: sovereign_stack.rs
docs/roadmaps/: roadmap.yaml
docs/specifications/: 100-point-book-qa-checklist.md  complete-chapter-spec.md
examples/: demo.rs
examples/ch01-intro/: Cargo.toml
examples/ch01-intro/src/: hello_sovereign.rs
examples/ch02-crisis/: Cargo.toml
examples/ch02-crisis/src/: deterministic_baseline.rs  llm_variance.rs  toyota_andon.rs
examples/ch03-trueno/: Cargo.toml
examples/ch03-trueno/src/: gpu_comparison.rs  simd_speedup.rs
examples/ch04-bft/: Cargo.toml
examples/ch04-bft/src/: bft_demo.rs  byzantine_simulation.rs  dual_model.rs  dual_model_consensus.rs  reliability_test.rs
examples/ch05-pmat/: Cargo.toml
examples/ch05-pmat/src/: coverage_demo.rs  quality_gates.rs  tdg_analysis.rs
examples/ch06-trueno-core/: Cargo.toml
examples/ch06-trueno-core/src/: matrix_ops.rs  vector_ops.rs
examples/ch07-trueno-gpu/: Cargo.toml
examples/ch07-trueno-gpu/src/: cpu_gpu_comparison.rs  gpu_acceleration.rs
examples/ch08-transpilation/: Cargo.toml
examples/ch08-transpilation/src/: ast_analysis.rs  transpilation_concepts.rs
examples/ch09-bashrs/: Cargo.toml
examples/ch09-bashrs/src/: bash_transpilation.rs  shell_safety.rs
examples/ch10-depyler/: Cargo.toml
examples/ch10-depyler/src/: ml_patterns.rs  python_transpilation.rs
examples/ch11-decy/: Cargo.toml
examples/ch11-decy/src/: c_transpilation.rs
examples/ch12-aprender/: Cargo.toml
examples/ch12-aprender/src/: ml_training.rs
examples/ch13-realizar/: Cargo.toml
examples/ch13-realizar/src/: inference_engine.rs
examples/ch14-entrenar/: Cargo.toml
examples/ch14-entrenar/src/: distributed_training.rs
examples/ch15-trueno-db/: Cargo.toml
examples/ch15-trueno-db/src/: vector_database.rs
examples/ch16-trueno-graph/: Cargo.toml
examples/ch16-trueno-graph/src/: graph_analytics.rs
examples/ch17-batuta/: Cargo.toml
examples/ch17-batuta/src/: workflow_orchestration.rs
examples/ch18-renacer/: Cargo.toml
examples/ch18-renacer/src/: syscall_profiling.rs
examples/ch19-repartir/: Cargo.toml
examples/ch19-repartir/src/: work_stealing.rs
examples/ch20-ml-pipeline/: Cargo.toml
examples/ch20-ml-pipeline/src/: ml_pipeline.rs
examples/ch21-compliance/: Cargo.toml
examples/ch21-compliance/src/: eu_compliance.rs
examples/ch22-deployment/: Cargo.toml
examples/ch22-deployment/src/: production_deployment.rs
src/: SUMMARY.md  appendix-ecosystem.md  appendix-reproducibility.md  appendix-spec.md  appendix-toyota-way.md  ch01-hello-sovereign.md  ch02-crisis.md  ch03-trueno.md  ch04-bft.md  ch05-pmat.md  ch06-trueno-core.md  ch07-trueno-gpu.md  ch08-transpilation-intro.md  ch09-bashrs.md  ch10-depyler.md  ch11-decy.md  ch12-aprender.md  ch13-realizar.md  ch14-entrenar.md  ch15-trueno-db.md  ch16-trueno-graph.md  ch17-batuta.md  ch18-renacer.md  ch19-repartir.md  ch20-ml-pipeline.md  ch21-compliance.md  ch22-deployment.md  ch23-citl.md  introduction.md  verification_specs.rs
tests/: integration.rs
