[workspace]
members = [
    "examples/ch01-intro",
    "examples/ch02-crisis",
    "examples/ch03-trueno",
    "examples/ch04-bft",
    "examples/ch05-pmat",
    "examples/ch06-trueno-core",
    "examples/ch07-trueno-gpu",
    "examples/ch08-transpilation",
    "examples/ch09-bashrs",
    "examples/ch10-depyler",
    "examples/ch11-decy",
    "examples/ch12-aprender",
    "examples/ch13-realizar",
    "examples/ch14-entrenar",
    "examples/ch15-trueno-db",
    "examples/ch16-trueno-graph",
    "examples/ch17-batuta",
    "examples/ch18-renacer",
    "examples/ch19-repartir",
    "examples/ch20-ml-pipeline",
    "examples/ch21-compliance",
    "examples/ch22-deployment",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Noah Gift <consulting@noahgift.com>"]
repository = "https://github.com/paiml/sovereign-ai-stack-book"

[workspace.dependencies]
# Core Sovereign AI Stack dependencies (crates.io versions as of 2025-01)
trueno = "0.11"
aprender = "0.24"
realizar = "0.5"
entrenar = "0.5"
pacha = "0.2"
trueno-db = "0.3"
trueno-graph = "0.1"
trueno-rag = "0.1"
trueno-viz = "0.1"
renacer = "0.9"
batuta = "0.4"
repartir = "2.0"
alimentar = "0.2"
bashrs = "6.51"
pmat = "2.213"
# depyler = "0.1"  # Not yet on crates.io
# decy = "0.1"     # Not yet on crates.io

# Testing & benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

# Serialization (GDPR-compliant SafeTensors)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rich terminal output
colored = "2.1"
indicatif = "0.17"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Root package for benchmarks
[package]
name = "sovereign-ai-stack-book"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
criterion = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }

[[example]]
name = "demo"
path = "examples/demo.rs"

[[bench]]
name = "sovereign_stack"
harness = false
